--- a/NeuralNetwork_with_CUDA/NeuralNetwork_with_CUDA.vcxproj
+++ b/NeuralNetwork_with_CUDA/NeuralNetwork_with_CUDA.vcxproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 11.8.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -129,7 +130,14 @@
   <ItemGroup>
     <ClCompile Include="NeuralNetwork_with_CUDA.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cuda_kernel.cuh" />
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="File.cu" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 11.8.targets" />
   </ImportGroup>
 </Project>
