Read csv file and creating a 2D array with all data in it

--- a/NeuralNetwork_with_CUDA/NeuralNetwork_with_CUDA.vcxproj
+++ b/NeuralNetwork_with_CUDA/NeuralNetwork_with_CUDA.vcxproj
@@ -130,9 +130,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="NeuralNetwork_with_CUDA.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cuda_kernel.cuh" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="File.cu" />
