--- a/NeuralNetwork_with_CUDA/NeuralNetwork_with_CUDA.vcxproj.filters
+++ b/NeuralNetwork_with_CUDA/NeuralNetwork_with_CUDA.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="NeuralNetwork_with_CUDA.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="File.cu">
@@ -26,6 +29,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cuda_kernel.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
