Creating class NeuralNetwork and functions: init,delete,init_weights_biases

--- a/NeuralNetwork_with_CUDA/NeuralNetwork_with_CUDA.vcxproj
+++ b/NeuralNetwork_with_CUDA/NeuralNetwork_with_CUDA.vcxproj
@@ -130,10 +130,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="NeuralNetwork_with_CUDA.cpp" />
+    <ClCompile Include="Neural_Network.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cuda_kernel.cuh" />
+    <ClInclude Include="Neural_Network.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
