--- a/NeuralNetwork_with_CUDA/NeuralNetwork_with_CUDA.vcxproj.filters
+++ b/NeuralNetwork_with_CUDA/NeuralNetwork_with_CUDA.vcxproj.filters
@@ -68,4 +68,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="test_write_into_file.txt" />
+  </ItemGroup>
 </Project>
